css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/


html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Your code starts here! */

.navigation{
    display: flex;
    justify-content: center;
}
.navigation ul {
    display: flex;
    align-self: center;
}
.navigation ul li a {
    padding: 8px 16px;
}
.logo{
    align-self: center;
}
nav a{
	padding: 3% 3%;
	color: gray;
}
.title{
	display: inline-block;
	text-align: center;
	width: 55%;
	float: left;
	height: 55%;
	margin: 1% ;
}
.logo2{
	display: inline-block;
	width: 40%;
	margin-right: 1%;
}
h1 {
	font-size: 400%;
	padding:20% 0 0 0;
}
.get-started{
	border:1px solid black;
	text-align: center;
	padding:8px 16px;
}
.top-content{
border: 3px solid red;
margin: 5% 0 0 0;
}
.features{	
	width: 45%;
	display: inline-block;
	margin: 2%;
}
.about{
	width: 45%;
	display: inline-block;
	margin: 2%;
}
.middle-img{
	margin: 0 2% 0 2%;
	width: 100%;
}
.services{
	width: 28%;
	display: inline-block;
	margin: 2%;
}
.product{
	width: 28%;
	display: inline-block;
	margin: 2%;
}
.vision{
	width: 28%;
	display: inline-block;
	margin: 2%;
}
.contact{
	width: 20%;
	margin: 0 0 0 2%;
}
footer {
	text-align: center;
	font-size: small;
	margin: 5%;
	padding: 16px 0;
}
span.phone-number{
	padding: 8px 0;
	display: inline-block;
}
.whole-page{
    padding: 10%;
}
@media only screen and (max-width: 800px){


    .top{
        display: flex;
        flex-wrap: nowrap;
        width: 100%;
    }
    .navigation{
        flex-direction: column-reverse;
    }
    .logo2{
        display: none;
    }
    .title{
        width: 100%;
        height: 600px;
        display: flex;
        flex-direction: column;
        align-items: center;
        padding:0 5%;
        
    }

    .get-started{
        margin: 0 80%;
    }

}
@media only screen and (max-width:500px){
    .top{
        height: 400px;
        
    }
    .navigation{
        width: 100%;
    
        height: 350px;
        display: flex;
        justify-content: center;
        
    }
    .navigation ul {
        flex-direction: column;
        
        display: flex;
        width: 480px;
        height: 250px;
        align-items: center;
        justify-content: flex-start;
    }
    .navigation ul li {
      border-top: 1px solid black;
        padding: 20px 110px; 
        border-bottom: 1px solid black;
        

    }
    .navigation ul li a {
       text-decoration: none; 
       color: gray;
    }
    .logo{
        padding:2% 10%;
        margin-bottom: 20px;
    }
   .title{
       height: 350px;
       border-bottom: 1px solid black;
   }
   .top{
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
   }
   .features{
       display: flex;
       width: 280px;
       flex-direction: column;
       justify-content: center;
   }
   .about{
    display: flex;
    width: 280px;
    flex-direction: column;
    justify-content: center;
}
    .bot{
        display: flex;
        flex-direction: column;
       
        justify-content: center;
        align-items: center;

    }
    .services{
        display: flex;
    width: 280px;
    flex-direction: column;
    justify-content: center;
}
.product{
    display: flex;
width: 280px;
flex-direction: column;
justify-content: center;
}
.vision{
    display: flex;
width: 280px;
flex-direction: column;
justify-content: center;
border-bottom: 1px solid black;
padding-bottom: 10px;
}
.contact{
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-left: 100px;
    
}
address{
    width: 200px;
}
.middle-img{
    width: 500px;
    padding: 2% 10%;
}

}

